--- a/app/src/main/res/layout/row.xml
+++ b/app/src/main/res/layout/row.xml
@@ -11,7 +11,7 @@
         android:layout_weight="4"/>
 
     <TextView
-        android:id="@+id/artist_name"
+        android:id="@+id/album_name"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_weight="4"
