--- a/app/src/main/res/layout/row_main_activity.xml
+++ b/app/src/main/res/layout/row_main_activity.xml
@@ -4,24 +4,73 @@
     android:layout_width="match_parent"
     android:layout_height="50dp">
 
-    <TextView
-        android:id="@+id/song"
+    <FrameLayout
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_weight="3"/>
+        android:layout_height="100dp"
+        android:layout_weight="3"
+        android:layout_marginRight="5dp"
+        android:layout_marginBottom="3dp"
+        android:layout_marginTop="3dp">
+        <ImageView
+            android:id="@+id/image_album"
+            android:layout_width="fill_parent"
+            android:layout_height="fill_parent"
+            android:adjustViewBounds="true"
+            android:scaleType="fitCenter"/>
+    </FrameLayout>
 
-    <TextView
-        android:id="@+id/album"
+    <GridLayout
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_weight="3"/>
+        android:layout_height="100dp"
+        android:layout_weight="7"
+        android:rowCount="3"
+        android:columnCount="2"
+        android:orientation="horizontal"
+        android:layout_marginLeft="5dp"
+        android:layout_marginBottom="3dp"
+        android:layout_marginTop="3dp">
+        <TextView
+            android:text="Song: "
+            android:textSize="18dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="2"
+            android:textStyle="bold"/>
+        <TextView
+            android:id="@+id/song"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="4"
+            android:textSize="18dp"
+            android:textStyle="bold"/>
 
-    <ImageView
-        android:id="@+id/image_album"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_weight="4"
-        android:adjustViewBounds="true"
-        android:scaleType="fitCenter"/>
+        <TextView
+            android:text="Album: "
+            android:textSize="14dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="2"/>
+        <TextView
+            android:id="@+id/album"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="4"
+            android:textSize="14dp"/>
+
+        <TextView
+            android:text="Artist: "
+            android:textSize="14dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="2"
+            android:textStyle="italic"/>
+        <TextView
+            android:id="@+id/artist"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="4"
+            android:textSize="14dp"
+            android:textStyle="italic"/>
+    </GridLayout>
 
 </LinearLayout>
