--- a/app/src/main/res/layout/activity_search_results.xml
+++ b/app/src/main/res/layout/activity_search_results.xml
@@ -9,9 +9,18 @@
     android:paddingBottom="@dimen/activity_vertical_margin"
     tools:context="com.ilagev.dasmecp2.SearchResultsActivity">
 
+    <TextView
+        android:layout_width="fill_parent"
+        android:layout_height="50dp"
+        android:text="@string/searchResult"
+        android:textAlignment="center"
+        android:textStyle="bold"/>
+
+
     <ListView
         android:id="@+id/canciones_buscadas"
         android:layout_width="fill_parent"
-        android:layout_height="fill_parent" />
+        android:layout_height="fill_parent"
+        android:layout_marginTop="25dp"/>
 
 </RelativeLayout>
