--- a/app/src/main/res/layout/row_main_activity.xml
+++ b/app/src/main/res/layout/row_main_activity.xml
@@ -30,7 +30,7 @@
         android:layout_marginBottom="3dp"
         android:layout_marginTop="3dp">
         <TextView
-            android:text="Song: "
+            android:text="@string/song"
             android:textSize="18dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -45,7 +45,7 @@
             android:textStyle="bold"/>
 
         <TextView
-            android:text="Album: "
+            android:text="@string/album"
             android:textSize="14dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -58,7 +58,7 @@
             android:textSize="14dp"/>
 
         <TextView
-            android:text="Artist: "
+            android:text="@string/artist"
             android:textSize="14dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
