--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -4,7 +4,8 @@
     <item
         android:id="@+id/menu_search"
         android:title="@string/actionBarSearchName"
+        android:icon="@drawable/searchicon"
         appcompat:actionViewClass="android.widget.SearchView"
-        appcompat:showAsAction="always" />
+        appcompat:showAsAction="always"/>
 
 </menu>
